k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions-deployment
spec:
  selector:
    matchLabels:
      app: questions
  template:
    metadata:
      labels:
        app: questions
    spec:
      containers:
        - name: questions
          image: ghcr.io/mobqom/questions:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
            - name: grpc
              containerPort: 50051
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      restartPolicy: Always
