k8s/base/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questions-db
spec:
  selector:
    matchLabels:
      app: questions-db
  template:
    metadata:
      labels:
        app: questions-db
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: questions-db
spec:
  selector:
    app: questions-db
  ports:
    - port: 5432
      targetPort: 5432
