k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: questions-service
spec:
  type: ClusterIP
  selector:
    app: questions
  ports:
    - name: http
      port: 80
      targetPort: 8081
    - name: grpc
      port: 50051
      targetPort: 50051
